Working, stylized About page 5/12/15

--- a/care/templates/care/about.html
+++ b/care/templates/care/about.html
@@ -2,31 +2,50 @@
 <html>
 <head lang="en">
     <style>
-        body {background-color: #fbf8ff}
-        h1 {color: darkblue}
-        p { font-family: Georgia, serif;
-            font-size: 20px; }
+
+        h1 {color: #0e058b;
+            margin-left: 8cm;
+        }
+        p { font-family: "Gotham", "lucida grande", "Segoe UI", arial, verdana, "lucida sans unicode", tahoma, sans-serif;
+            font-size: 17px;
+            border:2px solid grey;
+            padding: 10px;
+            border-radius: 40px;
+            padding: 30px;
+            width: 700px;
+            height: 450px;
+            margin-left: 7cm;}
+
+        body {background-color: #FEF6FE;}
+
     </style>
     <meta charset="UTF-8">
     <title> Caregiver Response </title>
 </head>
 <body>
-    <h1> When you need a fresh perspective....</h1> <br />
+<h1> When you need a fresh perspective....</h1> <br />
 
-    <p> Caregiver Response allows the user to type in a situation and kick back a
-    response designed to help shift <br /> the moment to one that is less stressful for both the
-    patient and the caregiver.</p>
 
-    <p> The words we speak can be powerful, so why not use the ones that
-    make the most difference in the lives <br /> of patients to help ourselves? </p>
 
-    <p>This app is designed to create a better experience and give the user a better way
-    to communicate, clearly and easily. <br /> You will be able to create a user profile that allows
-    you to add phrases you find helpful & share with family members <br />
-        or colleagues.
-    Our objective is to help guide you while learning from your experiences to create better
-    solutions for all.
-    </p>
+    <p> This app was inspired by my own experience with a dementia sufferer. So many websites
+        are eager to tell you what not to say and truthfully, there are many times when a list of
+        what <strong>not</strong> to do simply won't help.<br><br>
+
+        <strong>Caregiver Response</strong> is designed to change the way caregivers are able to communicate
+        with their patients or loved ones in a more thoughtful manner. While compassion is always important,
+        knowing phrases that may help to ease distress are vital for communication.<br><br>
+
+        The words we speak can be powerful, so why not use words that have the potential to
+        make the greatest difference in the lives of patients to help ourselves? This app allows the
+        user to look at a situation and receive a solution designed to help shift the moment to one
+        that is more peaceful for both the patient and the caregiver.<br><br>
+
+        <strong>Caregiver Response</strong> is designed to create a higher quality experience and give the user a
+        better way to communicate, clearly and easily. You will be able to create a user profile
+        that allows you to add resolutions that are helpful for the individual situation & share with
+        family members or colleagues. Our objective is to help guide you while learning from your experiences
+        to create improved solutions for all. </p>
+
 
 
 </body>
