--- a/care/templates/care/situation_response.html
+++ b/care/templates/care/situation_response.html
@@ -10,21 +10,21 @@
             padding: 15px;
             border-radius: 40px;
             padding: 25px;
-            width: 1200px;
-            height: 150px;  }
+            width: 300px;
+            height: 500px;  }
 
           h1, h2, h3 {color: darkblue;
                       text-align: center;
-                      font-size: 30px;
-                      }
-    </style>
+                      font-size: 30px; }
+
+</style>
     <title>Situations</title>
 </head>
 <body>
+
 <h1>Anger/Violence</h1><br>
 
-
-    <p> Use the 'voice' of someone on par, as they may have regressed in age,
+<p> Use the 'voice' of someone on par, as they may have regressed in age,
     while calling upon a trusted adult, ie a parent,  allowing the situation to shift
     the childlike state into respecting a known authority.</p>
 
@@ -37,13 +37,12 @@
     but first let’s do y’ is a distraction. This will help shift the moment and the mood.
 
     <br><br>
-
-    <h2>Memory Loss/Age Regression</h2>
+<h2>Memory Loss/Age Regression</h2>
     <br>
 
 
     <p> Imagine how frightening it would be to lose your memory. Due to the age regression, you may be now dealing with a child or
-        teen mentally/emotionally. Their attention span may be different, not to mention the fact that hearing may also be an issue!
+       teen mentally/emotionally. Their attention span may be different, not to mention the fact that hearing may also be an issue!
         Try not to have a lot of loud noise such as the TV or stereo playing when trying to speak with them. Use their name and
         speak slowly & clearly. Keep in mind that the music or TV choice can affect the patients mood.</p>
 
@@ -54,7 +53,6 @@
     <p>If the patient is telling a story from the point of view of a different age, simply listen. Telling them that they are 80 when
         they believe they are 13 will simply upset them. Try to engage them as you would someone the age of the storyteller. This
         should shift itself.</p>
-
 
 </body>
 </html>
