Everything works. My columns look great. EVERYTHING WORKS!!!

--- a/care/templates/care/index.html
+++ b/care/templates/care/index.html
@@ -18,8 +18,9 @@
 
 <body>
     <h1>Welcome to Caregiver Response</h1>
-    <strong>{{ boldmessage }}</strong><br />
-    <a href="/care/about/">About</a><br /> <br>
+    <strong>{{ boldmessage }}</strong><br /><br>
+    <a href="/care/about/">About</a><br />
+    <a href="/care/situation_response/">Situation and Response</a><br /><br>
 
     <img src="{% static "images/Trees.jpg" %}" alt="Picture of Trees" />
 </body>
