--- a/care/templates/care/situation_response.html
+++ b/care/templates/care/situation_response.html
@@ -1,58 +1,91 @@
+
 <!DOCTYPE html>
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <style>
-        body { background-color: #FEF6FE; }
-        p { font-family: "Gotham", "lucida grande", "Segoe UI", arial, verdana, "lucida sans unicode", tahoma, sans-serif;
-            font-size: 20px;
-            border:1px solid grey;
-            padding: 15px;
-            border-radius: 40px;
-            padding: 25px;
-            width: 300px;
-            height: 500px;  }
+    <title>Situations and Responses</title>
+    <h1>Situations and Responses</h1>
+    <div class="column1of3">
+        <h3>Anger/Violence</h3>
+        <p>
+           <ol>
+ <li><strong>Hair pulling/hitting:</strong> Use the 'voice' of someone on par, as they may have regressed in age,
+    while calling upon the words of a trusted adult, ie a parent, allowing the situation to shift
+    the childlike state into respecting a known authority.
+     <em>Example: "My Mom says it isn't nice to...."</em></li><br>
 
-          h1, h2, h3 {color: darkblue;
-                      text-align: center;
-                      font-size: 30px; }
+ <li><strong>Accusations:</strong> The patient may notice something missing and is assuming someone stole it.
+    Understand that they cannot recall where they put or if item has been gone a long
+    time. Trying to rationalize will not help. Ask if they would like help searching for the item.</li><br>
 
-</style>
-    <title>Situations</title>
-</head>
-<body>
+<li><strong>Bear in mind that distress leads to other emotions.</strong> The issue of wanting to 'go home' may rise
+    due to the patients longing for a time when they had more control over their own life. Creating a to-do ‘we will have to do x,
+    but first let’s do y’ is a distraction. This will help shift the moment and the mood.</li>
+    </ol>
+    </div>
 
-<h1>Anger/Violence</h1><br>
+    <div class="column2of3">
+        <h3>Memory Loss/Age Regression</h3>
+        <ol>
+            <li><strong>Imagine how frightening it would be to lose your memory.</strong>
+                Due to age regression, you may be now dealing with a child or teen mentally and/or emotionally.
+                Their attention span may be different, not to mention the fact that hearing may also be an issue!
+        Try not to have a lot of loud noise such as the TV or stereo playing when trying to speak with them. Use
+                their name and speak slowly & clearly. Keep in mind that the music or TV choice can affect the patients mood.</li><br>
 
-<p> Use the 'voice' of someone on par, as they may have regressed in age,
-    while calling upon a trusted adult, ie a parent,  allowing the situation to shift
-    the childlike state into respecting a known authority.</p>
-
-<p> The patient may notice something missing and has decided to assume someone stole it.
-    Remember that they cannot recall where they put or that the item has been gone a long
-    time. Trying to rationalize will not help.</p>
-
-<p> The issue of wanting to 'go home' rises because the patient may be looking for a time
-    when they had more control over their own life. Creating a to-do ‘we will have to do x,
-    but first let’s do y’ is a distraction. This will help shift the moment and the mood.
-
-    <br><br>
-<h2>Memory Loss/Age Regression</h2>
-    <br>
-
-
-    <p> Imagine how frightening it would be to lose your memory. Due to the age regression, you may be now dealing with a child or
-       teen mentally/emotionally. Their attention span may be different, not to mention the fact that hearing may also be an issue!
-        Try not to have a lot of loud noise such as the TV or stereo playing when trying to speak with them. Use their name and
-        speak slowly & clearly. Keep in mind that the music or TV choice can affect the patients mood.</p>
-
-    <p>Try not to give the person multiple tasks at any given time. ‘Please wipe your face.’ is a simple, actionable request. If the
+            <li><strong>Try not to give the person multiple tasks at any given time.</strong> ‘Please wipe your face.’ is a simple, actionable request. If the
         patient is reluctant, remain kind but firm. If they want to go outside, let them know that will happen as soon as they
-        do the requested action. </p>
+        do the requested action. </li><br>
 
-    <p>If the patient is telling a story from the point of view of a different age, simply listen. Telling them that they are 80 when
-        they believe they are 13 will simply upset them. Try to engage them as you would someone the age of the storyteller. This
-        should shift itself.</p>
+            <li><strong> Try to engage them as you would someone the age of the storyteller.</strong> If the patient
+                is telling a story from the point of view of a different age, simply listen.
+                Telling them that they are 80 when they believe they are 25 will simply upset them. </li><br>
+        </ol>
+    </div>
+    <div class="column3of3">
+        <h3>Fear/Sadness</h3>
+        <ol>
+            <li><strong>Redirecting and Storytelling.</strong> Should the patient become upset because they cannot
+                find someone who may have passed on, you could say “I know you miss X very much.
+                I know they love you and wish they could be here with you.” You could also ask them
+                to tell you about the person he has asked about is a better way to calm a person with dementia. </li><br>
+
+            <li><strong>If they are focusing on something negative,</strong> you might try to ask them to tell you about a specific event
+                from the past in which they were happy, for example, their wedding day. Choosing one particular moment
+                is better than a broad scope. <em>Example: “Will you tell me about....?" </em> </li><br>
+            <li><strong>If they are feeling especially fearful,</strong> for example, not wanting to sleep alone in the dark, you can
+                offer to sit and hold their hand or simply to sit next to them while they fall asleep. If they
+                would prefer, offer to leave on a light and/or create white noise.
+</li>
+        </ol>
+    </div>
+</head>
+
+<body>
+<style>
+    .column1of3, .column2of3, .column3of3 {
+        width: 300px;
+        float: left;
+        margin: 50px;
+    }
+
+    h1 { text-align: center;
+    color: #051a8b; }
+
+    body { background-color: #FEF6FE;}
+
+    p { font-family: "Arial Black", Gadget, sans-serif;  }
+</style>
 
 </body>
 </html>
+
+
+{#            border:1px solid grey;#}
+{#            padding: 15px;#}
+{#            border-radius: 40px;#}
+{#            padding: 25px;#}
+{#            width: 300px;#}
+{#            height: 500px;  }#}
+
+
