Added gradients. Thinking about it.

--- a/templates/care/about.html
+++ b/templates/care/about.html
@@ -22,7 +22,10 @@
             height: 450px;
             margin-left: 7cm;}
 
-        body {background-color: #FEF6FE;}
+        body {background-color: #FEF6FE;
+             background: linear-gradient(#FEF6FE, #faa5ff); }
+
+
 
     </style>
 
