--- a/templates/care/index.html
+++ b/templates/care/index.html
@@ -11,5 +11,8 @@
 
     <img src="{% static "images/Trees.jpg" %}" alt="Picture of Trees" />
 
+    <style>
+   body { background: linear-gradient(#FEF6FE, #faa5ff);}
+    </style>
 
 {% endblock %}
