--- a/templates/care/situation_response.html
+++ b/templates/care/situation_response.html
@@ -118,6 +118,7 @@
     body {
         background-color: #FEF6FE;
         display: block;
+        background: linear-gradient(#FEF6FE, #faa5ff);
     }
 
     p {
