--- a/templates/care/about.html
+++ b/templates/care/about.html
@@ -4,34 +4,12 @@
 
 
 {% block body_block %}
-    <!DOCTYPE html>
-<html>
-<head lang="en">
-    <style>
-
-        h1 {color: #0e058b;
-            text-align: center;
-        }
-        p { font-family: "Gotham", "lucida grande", "Segoe UI", arial, verdana, "lucida sans unicode", tahoma, sans-serif;
-            font-size: 17px;
-            border:2px solid grey;
-            padding: 10px;
-            border-radius: 40px;
-            padding: 30px;
-            width: 700px;
-            height: 450px;
-            margin-left: 7cm;}
-
-        body {background-color: #FEF6FE;
-             background: linear-gradient(#FEF6FE, #faa5ff); }
 
 
 
-    </style>
+    <h1> When you need a fresh perspective....</h1> <br/>
 
-<h1> When you need a fresh perspective....</h1> <br />
-
-    <p> This app was inspired by my own experience with a dementia sufferer. So many websites
+    <p class="padded"> This app was inspired by my own experience with a dementia sufferer. So many websites
         are eager to tell you what not to say and truthfully, there are many times when a list of
         what <strong>not</strong> to do simply won't help.<br><br>
 
@@ -49,5 +27,6 @@
         that allows you to add resolutions that are helpful for the individual situation & share with
         family members or colleagues. Our objective is to help guide you while learning from your experiences
         to create improved solutions for all. </p>
+
 
 {% endblock %}
