Working locally but not in deployed server

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
             font-family: "Gotham", "lucida grande", "Segoe UI", arial, verdana, "lucida sans unicode", tahoma, sans-serif;
             min-height: 100%;
             display: block;
-            background: -moz-linear-gradient(#fefafa, #faa5ff 15%, #f88fff 35%);
+            background: -moz-linear-gradient(#fedffa, #faa5ff 15%, #f88fff 35%);
             padding-top: 1%;
         }
 
