Webform working in local not in deployed version

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,9 @@
             color: #feeefb;
             padding: .5em 1.5em;
             margin: .5em;
-            border-radius: 30px;
+            border-radius: 25px;
             width: .5px;
+
         }
         .padded {
             font-family: "Gotham", "lucida grande", "Segoe UI", arial, verdana, "lucida sans unicode", tahoma, sans-serif;
@@ -60,7 +61,6 @@
             margin: 7%;
             background-color: #fad7ff;
 
-
         }
 
         .content .leader {
@@ -82,6 +82,7 @@
 <body>
 <a href="{% url 'about' %}" class="button">About</a>
     <a href="/care/situation_response/" class="button">Situation and Response</a><br /><br>
+    <a href="/care/webform/" class="button">webform</a><br /><br>
 {% block body_block %}
 {% endblock %}
 </body>
