--- a/templates/care/webform.html
+++ b/templates/care/webform.html
@@ -1,19 +1,167 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
+<head>
+    <title>FormGet Responsive Form</title>
+    <!-----Including CSS for different screen sizes----->
+    <link rel="stylesheet" type="text/css" href="responsiveform.css">
+    <link rel="stylesheet" media="screen and (max-width: 1200px) and (min-width: 601px)" href="responsiveform1.css"/>
+    <link rel="stylesheet" media="screen and (max-width: 600px) and (min-width: 351px)" href="responsiveform2.css"/>
+    <link rel="stylesheet" media="screen and (max-width: 350px)" href="responsiveform3.css"/>
+    <style>
+
+        * {
+            /* With these codes padding and border does not increase it's width and gives intuitive style.*/
+            box-sizing: border-box;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: "Gotham", "lucida grande", "Segoe UI", arial, verdana, "lucida sans unicode", tahoma, sans-serif;
+            font-weight: bold;
+        }
+
+        div#envelope {
+            width: 55%;
+            margin: 10px 30% 10px 25%;
+            padding: 7px 0;
+            border: 2px solid gray;
+            border-radius: 7px;
+        }
+
+        form {
+            width: 70%;
+            margin: 4% 15%;
+        }
+
+        header {
+            background-color: #803079;
+            text-align: center;
+            padding-top: 4px;
+            padding-bottom: 3px;
+            margin-top: -7px;
+            margin-bottom: -2px;
+            border-radius: 6px 9px 0 0;
+            color: aliceblue;
+        }
+
+        /* Makes responsive fields. Sets size and field alignment.*/
+        input[type=text] {
+            margin-bottom: 20px;
+            margin-top: 10px;
+            width: 100%;
+            padding: 15px;
+            border-radius: 5px;
+            border: 1px solid #803079;
+        }
+
+        input[type=submit] {
+            margin-bottom: 20px;
+            width: 100%;
+            padding: 15px;
+            border-radius: 5px;
+            border: 1px solid #803079;
+            background-color: #803079;
+            color: aliceblue;
+            font-size: 15px;
+            cursor: pointer;
+        }
+
+        #submit:hover {
+            background-color: black;
+        }
+
+        textarea {
+            width: 100%;
+            padding: 15px;
+            margin-top: 10px;
+            border: 1px solid #7ac9b7;
+            border-radius: 5px;
+            margin-bottom: 20px;
+            resize: none;
+        }
+
+        input[type=text]:focus, textarea:focus {
+            border-color: #e3e4df;
+        }
+
+        div#envelope {
+            width: 80%;
+            margin: 10px 30% 10px 11%;
+        }
+
+        h2 {
+            font-size: 20px;
+        }
+
+        p {
+            font-size: 16px;
+        }
+
+        label {
+            font-size: 12px;
+        }
+
+        input[type=submit] {
+            padding: 5px;
+        }
+
+        input[type=text] {
+            padding: 8px;
+        }
+
+        div#envelope {
+            width: 80%;
+            margin: 10px 30% 10px 11%;
+        }
+
+        input[type=submit] {
+            padding: 8px;
+            font-size: 16px;
+        }
+
+        input[type=text] {
+            padding: 8px;
+        }
+
+        label {
+            font-size: 14px;
+        }
+
+        h2 {
+            font-size: 20px;
+        }
+
+        p {
+            font-size: 16px;
+        }
+
+        div#envelope {
+            width: 80%;
+            margin: 10px 30% 10px 11%;
+        }
+    </style>
+
 </head>
 <body>
-<form action="/my-handling-form-page" method="post">
-    <div>
-        <label for="name">Name:</label>
-        <input type="text" id="name" />
-    </div>
-    <div>
-    <label for="mail">E-mail:</label>
-    <input type="email" id="email" />
-    </div>
-</form>
+<div id="envelope">
+    <form action="" method="post">
+        <header>
+            <h2>Caregiver Responsive Form</h2>
+
+            <p>Questions? Tips? We love to hear from you!</p>
+        </header>
+        <label>Your Name</label>
+        <input name="name" placeholder="Sarah Jane Smith" type="text" width="100px;">
+        <label>Email Id</label>
+        <input name="email" placeholder="yourname@gmail.com" type="text">
+        <label>Message</label>
+<textarea cols="15" name="message" placeholder="Message" rows="10">
+</textarea>
+        <input id="submit" type="submit" value="Send Message">
+    </form>
+</div>
 </body>
 </html>
+
+{#http://www.formget.com/how-to-make-simple-responsive-form-for-a-website/##}
