--- a/templates/base.html
+++ b/templates/base.html
@@ -7,10 +7,11 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title> Caregiver Response </title>
+    <link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
     <style>
         body {
             text-align: center;
-            font-family: "Gotham", "lucida grande", "Segoe UI", arial, verdana, "lucida sans unicode", tahoma, sans-serif;
+            font-family: 'Muli', serif;
             min-height: 100%;
             display: block;
             background: -moz-linear-gradient(#fedffa, #faa5ff 15%, #f88fff 35%);
@@ -24,7 +25,6 @@
             margin: .5em;
             border-radius: 25px;
             width: .5px;
-
         }
         .padded {
             font-family: "Gotham", "lucida grande", "Segoe UI", arial, verdana, "lucida sans unicode", tahoma, sans-serif;
