--- a/templates/care/webform.html
+++ b/templates/care/webform.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FormGet Responsive Form</title>
+    <title>Caregiver Response Form</title>
     <!-----Including CSS for different screen sizes----->
     <link rel="stylesheet" type="text/css" href="responsiveform.css">
     <link rel="stylesheet" media="screen and (max-width: 1200px) and (min-width: 601px)" href="responsiveform1.css"/>
     <link rel="stylesheet" media="screen and (max-width: 600px) and (min-width: 351px)" href="responsiveform2.css"/>
     <link rel="stylesheet" media="screen and (max-width: 350px)" href="responsiveform3.css"/>
+    <link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
     <style>
 
         * {
@@ -17,31 +18,31 @@
         body {
             margin: 0;
             padding: 0;
-            font-family: "Gotham", "lucida grande", "Segoe UI", arial, verdana, "lucida sans unicode", tahoma, sans-serif;
+            font-family: 'Muli', serif;
             font-weight: bold;
         }
 
         div#envelope {
-            width: 55%;
-            margin: 10px 30% 10px 25%;
-            padding: 7px 0;
-            border: 2px solid gray;
+            width: 45%;
+            margin: 9px 25% 9px 20%;
+            padding: 6px 0;
+            border: 1.5px solid gray;
             border-radius: 7px;
         }
 
         form {
-            width: 70%;
-            margin: 4% 15%;
+            width: 55%;
+            margin: 3% 22%;
         }
 
         header {
             background-color: #803079;
             text-align: center;
             padding-top: 4px;
-            padding-bottom: 3px;
-            margin-top: -7px;
-            margin-bottom: -2px;
-            border-radius: 6px 9px 0 0;
+            padding-bottom: 2.5px;
+            margin-top: -5px;
+            margin-bottom: 7px;
+            border-radius: 5px 8px;
             color: aliceblue;
         }
 
@@ -58,7 +59,7 @@
         input[type=submit] {
             margin-bottom: 20px;
             width: 100%;
-            padding: 15px;
+            padding: 15px   ;
             border-radius: 5px;
             border: 1px solid #803079;
             background-color: #803079;
@@ -95,7 +96,7 @@
         }
 
         p {
-            font-size: 16px;
+            font-size: 18px;
         }
 
         label {
