--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 
-{% load staticfiles %}
-
-<html>
-
-<head lang="en">
     <meta charset="UTF-8">
     <title> Caregiver Response </title>
     <link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
     <style>
+
+{#This is the front page#}
         body {
             text-align: center;
             font-family: 'Muli', serif;
@@ -18,32 +15,34 @@
             padding-top: 1%;
         }
 
+{#These are the buttons on all pages#}
         a.button {
             background-color: #803079;
             color: #feeefb;
             padding: .5em .5em;
             margin: .5em;
-            border-radius: 2px;
-            width: 15%;
+            border-radius: 1em;
+            width: auto;
             display: inline-block;
         }
         .padded {
             font-family: 'Muli', serif;
-            font-size: 17px;
-            border: 2px solid grey;
-            padding: 10px;
-            border-radius: 40px;
-            padding: 30px;
-            width: 700px;
-            height: 450px;
+            font-size: 1em;
+            border: .5em solid grey;
+            padding: 5em;
+            border-radius: 2.5em;
+            padding: 1.875em;
+            width: 43.75em;
+            height: 28.125em;
             margin-left: 7cm;
         }
 
-
+{#S&R Page#}
         .column1of3, .column2of3, .column3of3 {
             width: 300px;
-            float: left;
+            display: inline-block;
             margin: 50px;
+            vertical-align: top;
         }
 
         p {
@@ -56,7 +55,6 @@
             padding: 5%;
             margin: 7%;
             background-color: #fad7ff;
-
         }
 
         .content .leader {
@@ -72,17 +70,168 @@
             display: block;
         }
 
+        footer {
+             position: absolute;
+             bottom: 0;
+             left: 0;
+             right: 0;
+             display: inline-block;
+        }
+
+        #webform
+        * {
+            /* With these codes padding and border does not increase it's width and gives intuitive style.*/
+            box-sizing: border-box;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Muli', serif;
+            font-weight: bold;
+            background: linear-gradient(#fedffa, #faa5ff 15%, #f88fff 50%);
+            position: relative;
+        }
+
+        div#envelope {
+            width: 45%;
+            margin: 9px 25% 9px 20%;
+            padding: 6px 0;
+            border: 1.5px solid gray;
+            border-radius: 7px;
+        }
+
+        form {
+            width: 55%;
+            margin: 3% 22%;
+        }
+
+        header {
+            background-color: #803079;
+            text-align: center;
+            padding-top: 4px;
+            padding-bottom: 2.5px;
+            margin-top: -5px;
+            margin-bottom: 7px;
+            border-radius: 5px 8px;
+            color: aliceblue;
+        }
+
+        /* Makes responsive fields. Sets size and field alignment.*/
+        input[type=text] {
+            margin-bottom: 20px;
+            margin-top: 10px;
+            width: 100%;
+            padding: 15px;
+            border-radius: 5px;
+            border: 1px solid #803079;
+        }
+
+        input[type=submit] {
+            margin-bottom: 20px;
+            width: 100%;
+            padding: 15px   ;
+            border-radius: 5px;
+            border: 1px solid #803079;
+            background-color: #803079;
+            color: aliceblue;
+            font-size: 15px;
+            cursor: pointer;
+        }
+
+        #submit:hover {
+            background-color: black;
+        }
+
+        textarea {
+            width: 100%;
+            padding: 15px;
+            margin-top: 10px;
+            border: 1px solid #7ac9b7;
+            border-radius: 5px;
+            margin-bottom: 20px;
+            resize: none;
+        }
+
+        input[type=text]:focus, textarea:focus {
+            border-color: #e3e4df;
+        }
+
+        div#envelope {
+            width: 80%;
+            margin: 10px 30% 10px 11%;
+        }
+
+        h2 {
+            font-size: 20px;
+        }
+
+        p {
+            font-size: 18px;
+        }
+
+        label {
+            font-size: 12px;
+        }
+
+        input[type=submit] {
+            padding: 5px;
+        }
+
+        input[type=text] {
+            padding: 8px;
+        }
+
+        div#envelope {
+            width: 80%;
+            margin: 10px 30% 10px 11%;
+        }
+
+        input[type=submit] {
+            padding: 8px;
+            font-size: 16px;
+        }
+
+        input[type=text] {
+            padding: 8px;
+        }
+
+        label {
+            font-size: 14px;
+        }
+
+        h2 {
+            font-size: 20px;
+        }
+
+        p {
+            font-size: 16px;
+        }
+
+        div#envelope {
+            width: 80%;
+            margin: 10px 30% 10px 11%;
+        }
     </style>
+
 </head>
 
 <body>
 
 <a href="{% url 'about' %}" class="button">About</a>
-    <a href="/care/situation_response/" class="button">Situation and Response</a><br /><br>
+    <a href="/care/situation_response/" class="button">Situation and Response</a>
     <a href="/care/webform/" class="button">Webform</a><br /><br>
 
 {% block body_block %}
 {% endblock %}
+
+<footer>
+     <p>      (C) S.M. Raven 2015. All Rights Reserved.</p>
+     <p>Contact information: <a href="mailto:someone@example.com">admin@caregiverresponse.com</a></p>
+
+ </footer>
+
+
 </body>
 </html>
 
