--- a/templates/care/webform.html
+++ b/templates/care/webform.html
@@ -156,9 +156,9 @@ function validateForm() {
     }
 }
 </script>
+
 <div id="envelope">
-    <form name="caregiverResponse">
-    <form action="demo_form.asp" onsubmit="return validateForm()" method="post">
+    <form onsubmit="return validateForm()" method="post">
         <header>
             <h2>Caregiver Responsive Form</h2>
 
