--- a/templates/care/webform.html
+++ b/templates/care/webform.html
@@ -158,7 +158,7 @@ function validateForm() {
 </script>
 
 <div id="envelope">
-    <form onsubmit="return validateForm()" method="post">
+    <form onsubmit="return validateForm()" method="post">{% csrf_token %}
         <header>
             <h2>Caregiver Responsive Form</h2>
 
